[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hackaforum"
version = "0.2.0"
description = "A CLI forum for Hack Club!"
readme = "README.md"
authors = [
    { name="Sabio" }
]
license = {text="GNU GPLv3"}
dependencies = ["click", "rich"]

[project.scripts]
hackaforum = "hackaforum:cli"